crates/pandalang/src/snapshots/pandalang__parser__tests__parses_exprs@var__multi_letter.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/var/multi_letter.panda
---
Ok(
    Var(
        Var {
            name: "foo",
        },
    ),
)
