crates/pandalang/src/snapshots/pandalang__parser__tests__parses_exprs@var__prime.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/var/prime.panda
---
Ok(
    Var(
        Var {
            name: "x'",
        },
    ),
)
