crates/pandalang/src/snapshots/pandalang__parser__tests__parses_exprs@var__underscore.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/var/underscore.panda
---
Ok(
    Var(
        Var {
            name: "foo_bar",
        },
    ),
)
