crates/pandalang/src/snapshots/pandalang__parser__tests__parses_exprs@var__var.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/var/var.panda
---
Ok(
    Var(
        Var {
            name: "x",
        },
    ),
)
